// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Text component decorated 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<span
  className="c0"
  fontSize="medium"
  textDecoration="line-through"
>
  Hello
</span>
`;

exports[`A Text component resized 1`] = `
.c0 {
  font-size: 2.875rem;
  line-height: 4rem;
}

<span
  className="c0"
  fontSize="xxxxlarge"
>
  Hello
</span>
`;

exports[`A Text component text transformed 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  text-transform: uppercase;
}

<span
  className="c0"
  fontSize="medium"
>
  Hello
</span>
`;

exports[`A Text component weight 1`] = `
.c0 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
}

<span
  className="c0"
  fontSize="medium"
  fontWeight="bold"
>
  Hello
</span>
`;

exports[`A Text component with variant 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  color: #CC1F36;
}

<span
  className="c0"
  fontSize="medium"
>
  Hello
</span>
`;

exports[`A Text component wrapped 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  overflow-wrap: break-word;
}

<span
  className="c0"
  fontSize="medium"
  wrap={true}
>
  Hello
</span>
`;

exports[`A default Text component 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
}

<span
  className="c0"
  fontSize="medium"
>
  Hello
</span>
`;
